# commontools

./: README.md  pyproject.toml
src/commontools/: __main__.py
src/commontools/cli/: __init__.py  concatemerize.py
tests/: test_concatemerize.py
